objects/Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Agency_Transfer_Amount__c</fullName>
        <label>Total Agency Transfer Amount</label>
        <summarizedField>Agency_Transfer__c.Transfer_Amount__c</summarizedField>
        <summaryForeignKey>Agency_Transfer__c.Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Drawdown_Limit__c</fullName>
        <label>Total Drawdown Limit</label>
        <summarizedField>Drawdown__c.Facility_Limit__c</summarizedField>
        <summaryForeignKey>Drawdown__c.Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Facility_Amount__c</fullName>
        <label>Total Facility Amount</label>
        <summarizedField>Agreement_Party__c.Lender_Amount__c</summarizedField>
        <summaryForeignKey>Agreement_Party__c.Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Facility_Limit__c</fullName>
        <label>Total Facility Limit</label>
        <summarizedField>Facility__c.Facility_Limit__c</summarizedField>
        <summaryForeignKey>Facility__c.Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Facility_Percentage__c</fullName>
        <label>Total Facility Percentage</label>
        <summarizedField>Agreement_Party__c.Lender_Percentage__c</summarizedField>
        <summaryForeignKey>Agreement_Party__c.Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transaction_Exposure_Calculation_Method__c</fullName>
        <label>Transaction Exposure Calculation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Method A</fullName>
                </value>
                <value>
                    <fullName>Method B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Triparty_Agent__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <label>Triparty Agent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Undisclosed__c</fullName>
        <label>Undisclosed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Undisclosed</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vault__c</fullName>
        <label>Vault</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zippel__c</fullName>
        <label>Zippel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hAuto_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Created?</label>
        <type>Checkbox</type>
    </fields>
    <label>Agreement</label>
    <nameField>
        <label>Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <recordTypes>
        <fullName>Agreement</fullName>
        <active>true</active>
        <label>Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Agreement_Legal</fullName>
        <active>true</active>
        <description>Agreement Management</description>
        <label>Agreement Legal</label>
    </recordTypes>
    <recordTypes>
        <fullName>GMRA_Agreement</fullName>
        <active>true</active>
        <label>GMRA Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>GMSLA_Agreement</fullName>
        <active>true</active>
        <label>GMSLA Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>ISDA_Agreement</fullName>
        <active>true</active>
        <label>ISDA Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prime_Services_Agreement</fullName>
        <active>true</active>
        <label>Prime Services Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Read_Only_Agreement</fullName>
        <active>true</active>
        <label>Read Only Agreement</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACM_Facility_ID</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT
(
ISBLANK( ACM_Facility_ID__c )),
NOT (REGEX( ACM_Facility_ID__c , &quot;\\b[0-9]{8}\\b\\s([a-zA-Z0-9_]+)\\s([0-9]+)([a-zA-Z0-9_])[A-Z]{1}&quot;))
)</errorConditionFormula>
        <errorDisplayField>ACM_Facility_ID__c</errorDisplayField>
        <errorMessage>Please ensure that you enter the correct format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Facility_Amount_Cannot_Exceed_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>(ISBLANK(Limit__c ) == FALSE &amp;&amp; Total_Facility_Amount__c &gt; Limit__c ) ||  (ISBLANK(Limit__c ) == TRUE &amp;&amp; Total_Facility_Amount__c &gt; 0)</errorConditionFormula>
        <errorMessage>The total facility amount of all parties cannot exceed the facility limit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Facility_Percent_Cannot_Exceed_100</fullName>
        <active>true</active>
        <errorConditionFormula>Total_Facility_Percentage__c &gt; 100</errorConditionFormula>
        <errorMessage>The total facility percentage of all parties cannot exceed 100%.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LIBRA_Break_Clause_Days_Validation</fullName>
        <active>true</active>
        <description>Rule to prevents user from entering a value on the Break In Clause Days when the Master Agreement Required Prior to First field is checked.</description>
        <errorConditionFormula>AND((Matter_Deal__r.RecordType.Name = &quot;Market Transaction&quot; 
 || Matter_Deal__r.RecordType.Name = &quot;Market Transaction - Prime Services&quot;), 
Master_Agreement_Required_Prior_to_First__c = TRUE, NOT(ISBLANK(Break_Clause_days__c)))</errorConditionFormula>
        <errorMessage>You cannot add the Break Clause Days if  Master Agreement Required Prior to First field is checked, please update.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LIBRA_Break_Clause_on_MARPFT</fullName>
        <active>true</active>
        <description>Prompts CNSG user to complete the Break Clause value(days) if the Master Agreement Required Prior to First Trade is unchecked.</description>
        <errorConditionFormula>AND(
  
    
    Master_Agreement_Required_Prior_to_First__c = FALSE &amp;&amp; ISBLANK(Break_Clause_days__c),
    NOT(RecordType.DeveloperName  = &quot;Agreement&quot;),
    NOT(RecordType.DeveloperName  = &quot;Read_Only_Agreement&quot;),
    NOT(RecordType.DeveloperName  = &quot;Agreement_Legal&quot;)
  
)</errorConditionFormula>
        <errorMessage>Please complete the Break Clause Days field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LIBRA_MMAA_Absa_Own_Amount_Add_Amount</fullName>
        <active>true</active>
        <description>Prompts CNSG user to add the amount when Own Amount is selected.</description>
        <errorConditionFormula>AND((Matter_Deal__r.RecordType.Name = &quot;Market Transaction&quot; 
|| Matter_Deal__r.RecordType.Name = &quot;Market Transaction - Prime Services&quot;),ISPICKVAL(Margin_Maintenance_Amount_Absa__c, &quot;Own Amount&quot;), ISBLANK(Margin_Maintenance_Own_Amount_Absa__c))</errorConditionFormula>
        <errorMessage>Please add the the amount for the Margin Maintenance Amount - Absa</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LIBRA_MMAA_Counter_Own_Amount_Add_Amount</fullName>
        <active>true</active>
        <description>Prompts CNSG user to add the amount when Own Amount is selected.</description>
        <errorConditionFormula>AND((Matter_Deal__r.RecordType.Name = &quot;Market Transaction&quot; 
|| Matter_Deal__r.RecordType.Name = &quot;Market Transaction - Prime Services&quot;), ISPICKVAL(Margin_Maintenance_Amount_Counterparty__c, &quot;Own Amount&quot;), ISBLANK(Margin_Maintenance_Own_Amount_Counter__c))</errorConditionFormula>
        <errorMessage>Please add the the amount for the Margin Maintenance Amount - Counterparty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LIBRA_Party_B_Must_Have_SDS_ID</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(Agreement_Status__c, &quot;Confirmed/Completed&quot;) &amp;&amp;    (ISNULL(Matter_Deal__r.Relationship__r.SDS__c) || ISBLANK(Matter_Deal__r.Relationship__r.SDS__c) || Matter_Deal__r.Relationship__r.RecordType.DeveloperName == &apos;Prospect&apos; &amp;&amp; (Matter_Deal__r.RecordType.Name = &quot;Market Transaction&quot; || Matter_Deal__r.RecordType.Name = &quot;Market Transaction - Prime Services&quot;)),True,False)</errorConditionFormula>
        <errorMessage>You are not allowed to complete the Agreement if the Relationship does not have an SDS ID.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Libra_Netting_Complete_Check_on_Status</fullName>
        <active>true</active>
        <description>LIBRA - Display error message when user attempts to update agreement status to confirmed/complete if the related Matter netting complete checkbox not true</description>
        <errorConditionFormula>IF(OR(ISPICKVAL(Matter_Deal__r.Relationship_Type_picklist__c, &quot;Collective Investment Scheme Manager&quot;), ISPICKVAL(Matter_Deal__r.Relationship_Type_picklist__c, &quot;Asset Manager&quot;)), false, 
AND(RecordType.DeveloperName == &apos;ISDA_Agreement&apos;,  ISPICKVAL(Agreement_Status__c,&apos;Confirmed/Completed&apos;),  Matter_Deal__r.Netting_Complete__c == False))</errorConditionFormula>
        <errorMessage>Please note that the Netting needs to be completed before you can Confirm/Complete the Agreement</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Limit_exceeded_based_on_Facilities</fullName>
        <active>true</active>
        <errorConditionFormula>(ISBLANK(Limit__c ) == FALSE &amp;&amp; Total_Facility_Amount__c &gt;  Limit__c ) || (ISBLANK(Limit__c ) == TRUE &amp;&amp; Total_Facility_Amount__c  &gt; 0)</errorConditionFormula>
        <errorMessage>Please ensure that the Agreement Limit is not exceeded</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Transfer_Amount_Cannot_Exceed_Limit</fullName>
        <active>true</active>
        <description>The Total Transfer Limit cannot exceed the Agreement Limit</description>
        <errorConditionFormula>Total_Agency_Transfer_Amount__c &gt;  Limit__c</errorConditionFormula>
        <errorMessage>The Total Transfer Limit cannot exceed the Agreement Limit</errorMessage>
    </validationRules>
</CustomObject>